# miniserver

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
include/: packet.hpp  reader.hpp  result.hpp  server.hpp  session.hpp
src/: cilent.cpp  main.cpp  server.cpp  session.cpp
test/: test.txt
